UI: Fix environment prefs not showing properly - fixes #1257
(integrated from master branch change 9.2.1-1445-g943970c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -479,6 +479,11 @@ treechildren::-moz-tree-twisty {
     margin-top: 3px;
 }
 
+.tree-stack
+{
+    min-height: 100px;
+}
+
 tree.twisty-only treechildren::-moz-tree-image
 {
     margin-left: -14px;
